basic winner message append to DOM

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
             <button class="btn-roll" id="roll-dice"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold" id="hold-dice"><i class="ion-ios-download-outline"></i>Hold</button>
+            <h2 align="center" id="winner-message"></h2>
 
             <img src="dice-5.png" alt="Dice" class="dice">
         </div>
