--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <button class="btn-hold" id="hold-dice"><i class="ion-ios-download-outline"></i>Hold</button>
             <h2 align="center" id="winner-message"></h2>
 
-            <img src="dice-5.png" alt="Dice" class="dice">
+            <img src="dice-5.png" id="dice" class="dice">
         </div>
 
         <script src="app.js"></script>
