--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
             <button class="btn-roll" id="roll-dice"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold" id="hold-dice"><i class="ion-ios-download-outline"></i>Hold</button>
-            <h2 align="center" id="winner-message"></h2>
+            <h1 align="center" id="winner-message"></h1>
+            <h2 align='center' id="lose-turn"></h2>
 
             <img src="dice-5.png" id="dice" class="dice">
         </div>
