initial game stat and new game event handler

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-            <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
+            <button class="btn-new" id="new-game"><i class="ion-ios-plus-outline"></i>New game</button>
             <button class="btn-roll" id="roll-dice"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold" id="hold-dice"><i class="ion-ios-download-outline"></i>Hold</button>
             <h1 align="center" id="winner-message"></h1>
